refactor(documenso): require a single signer and prefill the student only